--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -2,9 +2,9 @@ name: Makefile CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "temporarily-disabled" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "temporarily-disabled" ]
 
 jobs:
   build:
